--- a/themes/default/css/global.css
+++ b/themes/default/css/global.css
@@ -1526,10 +1526,10 @@ table.scrollable_inside {
 .results_table thead tr:first-child *:last-child, .results_table tbody tr:first-child *:last-child {
 	{$BETA_CSS_PROPERTY,border-top-right-radius: 5px;}
 }
-.results_table thead tr:first-child *:first-child+results_table tbody tr:first-child *:first-child {
+.results_table[summary="{!COLUMNED_TABLE}"] tbody tr:first-child *:first-child {
 	{$BETA_CSS_PROPERTY,border-top-left-radius: 0px;}
 }
-.results_table thead tr:first-child *:last-child+results_table tbody tr:first-child *:last-child {
+.results_table[summary="{!COLUMNED_TABLE}"] tbody tr:first-child *:last-child {
 	{$BETA_CSS_PROPERTY,border-top-right-radius: 0px;}
 }
 .results_table tbody tr:last-child *:first-child {
